--- a/Privacy.html
+++ b/Privacy.html
@@ -3,65 +3,209 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artemis Lab</title>
+    <title>Artemis Lab – Privacy Policy</title>
     <link rel="stylesheet" href="./dist/main_PT.css">
 </head>
 <body>
     <div class="title">
         Privacy Policy
     </div>
+
     <div class="time">
         Effective date: April 26, 2024
     </div>
+
     <div class="content">
-        Thank you for choosing our app, either "Authenticator App: 2FA | MFA" or "Authenticator App - 2FA"  (the "App"). This Privacy Policy describes how your personal information is collected, used, and shared when you use our App.
+        Thank you for using the mobile applications and digital products developed by 
+        <strong>Artemis Lab</strong> (“we”, “us”, “our”). 
+        This Privacy Policy explains how we collect, use, disclose, and safeguard your information 
+        when you use any of our mobile applications, tools, or services (collectively, the “Services”).
     </div>
+
     <div class="detail">
-        <h3 class="supTitle">
-            <br>
-            Information We Collect
-        </h3>
+
+        <!-- ABOUT COMPANY -->
+        <h3 class="supTitle"><br>About Artemis Lab</h3>
         <p class="session">
-            <strong>1. Advertising IDs: </strong>the App may use third-party services like Google, Facebook, and Applovin to serve personalized ads. These services may collect your advertising ID, which is a unique identifier associated with your device. The advertising ID is used for ad targeting and performance analysis. Please refer to the privacy policies of these third-party services to understand how they handle your data.
+            Artemis Lab is an independent mobile software development company. 
+            We are not affiliated, associated, authorized, endorsed by, or officially connected with 
+            any third-party companies or platforms mentioned in our Services.
         </p>
+
+        <!-- INFO WE COLLECT -->
+        <h3 class="supTitle"><br>Information We Collect</h3>
+
         <p class="session">
-            <strong>2. Log Data: </strong>We may collect certain log data automatically when you use the App. This information may include your device's Internet Protocol (IP) address, device type, operating system version, and usage data such as the features you interact with and the time spent on the App. This data is collected for the purpose of analyzing the App' performance and improving its functionality.
+            <strong>1. Advertising Identifiers:</strong><br>
+            We may access your device’s advertising identifiers (Google Advertising ID, Apple IDFA) 
+            to provide personalized ads, frequency capping, fraud detection, and performance analytics.
         </p>
-        <h3 class="supTitle">
-            <br>
-            How We Use Your Information
-        </h3>
+
         <p class="session">
-            The information collected through advertising IDs is used for targeted advertising to enhance your experience with relevant ads. Log data is used to analyze user behavior, identify app issues, and improve the overall performance and user experience of the App. We do not share your personal information with third parties, except as described in this Privacy Policy.
+            <strong>2. Device & Technical Log Data:</strong><br>
+            We collect certain technical information automatically, including:
         </p>
-        <h3 class="supTitle">
-            <br>
-            Third-Party Services
-        </h3>
+
+        <ul class="session">
+            <li>Android Advertising ID</li>
+            <li>Error logs, crash diagnostics</li>
+            <li>Performance metrics</li>
+        </ul>
+
         <p class="session">
-            The App may use third-party services that have their privacy policies. These third-party services may collect information used to identify you. Please review their privacy policies to understand how your data is handled by them.
+            <strong>3. Usage Analytics:</strong><br>
+            Anonymous analytics to understand feature usage and improve product experience.  
+            No photos, videos, chats, or personal files are uploaded without your permission.
         </p>
-        <h3 class="supTitle">
-            <br>
-            Security
-        </h3>
+
         <p class="session">
-            The security of your information is essential to us. We strive to implement and maintain reasonable, industry-standard security measures to protect your data from unauthorized access, destruction, use, modification, or disclosure.
+            <strong>4. In-App Permissions:</strong><br>
+            Permissions such as camera, photos, notifications, or storage are used strictly 
+            for core functionality and never for unauthorized data collection.
         </p>
-        <h3 class="supTitle">
-            <br>
-            Changes to This Privacy Policy
-        </h3>
+
+        <!-- HOW WE USE -->
+        <h3 class="supTitle"><br>How We Use Your Information</h3>
         <p class="session">
-            We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
+            We use collected information to:
         </p>
-        <h3 class="supTitle">
-            <br>
-            Contact Us
-        </h3>
+        <ul class="session">
+            <li>Operate, maintain, and improve our Services</li>
+            <li>Deliver personalized and contextual advertising</li>
+            <li>Analyze user behavior and improve features</li>
+            <li>Provide crash diagnostics and performance insights</li>
+            <li>Prevent fraud, abuse, and system misuse</li>
+        </ul>
+
         <p class="session">
-            If you have any questions or suggestions about our Privacy Policy, please contact us at <a href="mailto:bravkidd@outlook.com">bravkidd@outlook.com</a>.
+            We do <strong>not</strong> sell your personal information.
         </p>
+
+        <!-- THIRD-PARTY SDKs -->
+        <h3 class="supTitle"><br>Third-Party SDKs We Use</h3>
+        <p class="session">
+            Our Services integrate industry-standard SDKs for advertising, analytics, crash reporting, 
+            and performance monitoring. These partners may collect device data in accordance with their own policies:
+        </p>
+
+        <ul class="session">
+            <li><strong>Google Firebase</strong> – Analytics & Crashlytics<br>
+                <a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a>
+            </li>
+            <li><strong>Google AdMob</strong> – Advertising & Monetization<br>
+                <a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a>
+            </li>
+            <li><strong>Applovin</strong> – Ads & Bidding<br>
+                <a href="https://www.applovin.com/privacy/" target="_blank">https://www.applovin.com/privacy/</a>
+            </li>
+            <li><strong>Pangle (Bytedance)</strong> – Advertising<br>
+                <a href="https://www.pangleglobal.com/privacy" target="_blank">https://www.pangleglobal.com/privacy</a>
+            </li>
+            <li><strong>Facebook SDK / Meta Audience Network</strong> – Ads & App Events<br>
+                <a href="https://www.facebook.com/privacy/policy" target="_blank">https://www.facebook.com/privacy/policy</a>
+            </li>
+        </ul>
+
+        <!-- INTERNATIONAL -->
+        <h3 class="supTitle"><br>International Data Transfers</h3>
+        <p class="session">
+            Your information may be processed on servers located outside your country of residence, 
+            including the United States, Singapore, or the European Union.  
+            We ensure safeguards (such as Standard Contractual Clauses or equivalent protections) 
+            to maintain an adequate level of data protection as required by applicable law.
+        </p>
+
+        <!-- RETENTION -->
+        <h3 class="supTitle"><br>Data Retention</h3>
+        <p class="session">
+            We retain data only for as long as necessary to operate our Services, comply with legal obligations, 
+            resolve disputes, and enforce our agreements. Crash logs and analytics data may be retained for a limited period.
+        </p>
+
+        <!-- SECURITY -->
+        <h3 class="supTitle"><br>Security</h3>
+        <p class="session">
+            We implement industry-standard administrative, technical, and physical measures designed to protect your information 
+            from unauthorized access, alteration, disclosure, or destruction.  
+            Although no system is 100% secure, we continuously improve our security practices.
+        </p>
+
+        <!-- GDPR -->
+        <h3 class="supTitle"><br>GDPR (European Union) Compliance</h3>
+        <p class="session">
+            If you reside in the EU/EEA, you have rights under the General Data Protection Regulation (GDPR), including:
+        </p>
+        <ul class="session">
+            <li>Right to access your personal data</li>
+            <li>Right to correct inaccuracies</li>
+            <li>Right to delete your personal data (“Right to be Forgotten”)</li>
+            <li>Right to restrict or object to processing</li>
+            <li>Right to data portability</li>
+            <li>Right to withdraw consent at any time</li>
+        </ul>
+        <p class="session">
+            Legal bases for processing include legitimate interests, consent, and contractual necessity.
+        </p>
+
+        <!-- CCPA -->
+        <h3 class="supTitle"><br>CCPA / CPRA (California) Compliance</h3>
+        <p class="session">
+            If you are a California resident, the California Consumer Privacy Act (CCPA/CPRA) provides you rights to:
+        </p>
+        <ul class="session">
+            <li>Request disclosure of the categories of data collected</li>
+            <li>Request deletion of personal information</li>
+            <li>Opt out of data “sharing” for advertising purposes</li>
+            <li>Request correction of inaccurate information</li>
+            <li>Non-discrimination for exercising privacy rights</li>
+        </ul>
+        <p class="session">
+            We do not “sell” personal data as defined under the CCPA.
+        </p>
+
+        <!-- LGPD -->
+        <h3 class="supTitle"><br>LGPD (Brazil) Compliance</h3>
+        <p class="session">
+            For users in Brazil, we comply with the Lei Geral de Proteção de Dados (LGPD).  
+            You have rights to access, correct, delete, anonymize, or object to processing of your personal data.  
+            Data is processed based on consent, legitimate interest, or contractual necessity.
+        </p>
+
+        <!-- COPPA -->
+        <h3 class="supTitle"><br>Children’s Privacy (COPPA)</h3>
+        <p class="session">
+            Our Services are not directed to children under 13.  
+            We do not knowingly collect personal information from children.  
+            If we become aware of such collection, we delete the data immediately.
+        </p>
+
+        <!-- RIGHTS & OPT OUT -->
+        <h3 class="supTitle"><br>Your Choices & Opt-Out Options</h3>
+        <p class="session">
+            You may disable personalized advertising through the device settings:
+        </p>
+        <ul class="session">
+            <li><strong>Android:</strong> Settings → Google → Ads → Opt out of Ads Personalization</li>
+            <li><strong>iOS:</strong> Settings → Privacy & Security → Tracking</li>
+        </ul>
+        <p class="session">
+            You may also request data deletion or access by contacting us.
+        </p>
+
+        <!-- POLICY CHANGES -->
+        <h3 class="supTitle"><br>Changes to This Policy</h3>
+        <p class="session">
+            We may update this Privacy Policy periodically.  
+            All changes will be posted on this page and take effect immediately upon posting.
+        </p>
+
+        <!-- CONTACT -->
+        <h3 class="supTitle"><br>Contact Us</h3>
+        <p class="session">
+            If you have any privacy questions, requests, or concerns, please contact us:<br>
+            <a href="mailto:bravkidd@outlook.com">bravkidd@outlook.com</a>
+        </p>
+
     </div>
 </body>
 </html>
