--- a/Privacy.html
+++ b/Privacy.html
@@ -27,7 +27,7 @@
         <!-- ABOUT COMPANY -->
         <h3 class="supTitle"><br>About Artemis Lab</h3>
         <p class="session">
-            Artemis Lab is an independent mobile software development company. 
+            Artemis Lab is an independent mobile software developer. 
             We are not affiliated, associated, authorized, endorsed by, or officially connected with 
             any third-party companies or platforms mentioned in our Services.
         </p>
@@ -47,7 +47,6 @@
         </p>
 
         <ul class="session">
-            <li>Android Advertising ID</li>
             <li>Error logs, crash diagnostics</li>
             <li>Performance metrics</li>
         </ul>
@@ -209,3 +208,4 @@
     </div>
 </body>
 </html>
+
