Update Terms of Services.html

--- a/Terms of Services.html
+++ b/Terms of Services.html
@@ -3,89 +3,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artemis Lab</title>
+    <title>Artemis Lab – Terms of Service</title>
     <link rel="stylesheet" href="./dist/main_PT.css">
 </head>
 <body>
-    <div class="title">
-        Terms of Service
-    </div>
-    <div class="time">
-        Effective date: April 26, 2024
-    </div>
+    <div class="title">Terms of Service</div>
+    <div class="time">Effective date: April 26, 2024</div>
+
     <div class="content">
-        By downloading, installing, or using our app, either "Authenticator App: 2FA | MFA" or "Authenticator App - 2FA"  (the "App"), you agree to be bound by these Terms of Service. If you do not agree with any part of these terms, please do not use any of the App.
+        Welcome to the mobile applications and digital services provided by 
+        <strong>Artemis Lab</strong> (“we”, “us”, “our”).  
+        These Terms of Service (“Terms”) govern your access and use of all software, mobile applications, 
+        websites, and related services offered by Artemis Lab (collectively, the “Services”).  
+        By using our Services, you agree to these Terms.
     </div>
+
     <div class="detail">
-        <h3 class="supTitle">
-            <br>
-            1. Use of the App
-        </h3>
+
+        <h3 class="supTitle"><br>1. Acceptance of Terms</h3>
         <p class="session">
-            the App is provided solely for the purpose of enabling two-factor authentication (2FA) using one-time passwords (OTP) and related security features. You agree not to use the App for any unlawful, unauthorized, or inappropriate purposes.
+            By downloading, accessing, or using our Services, you acknowledge that you have read, 
+            understood, and agreed to be bound by these Terms and our Privacy Policy.  
+            If you do not agree, you must stop using the Services immediately.
         </p>
-        <h4 class="supTitle">
-            <br>
-            1.1 About Subscriptions 
-        </h4>
+
+        <h3 class="supTitle"><br>2. Independent Developer</h3>
         <p class="session">
-            The subscription gives you unlimited access to the App. If you don't cancel before the trial ends, you will be charged monthly or yearly until you cancel. For the lifetime package, you only need to buy once and unlock all contents the App forever.
+            Artemis Lab is an independent software developer.  
+            We are not affiliated, endorsed, associated, or partnered with any third-party companies mentioned 
+            within the Services, including but not limited to advertising networks, analytics providers, 
+            SDK vendors, or platform owners (e.g., Google, Apple, Facebook, Bytedance).
         </p>
-        <p></p>
+
+        <h3 class="supTitle"><br>3. Eligibility</h3>
         <p class="session">
-            You can manage or cancel your subscriptions by going to GooglePlay -> your personal profile -> Payments & Subscriptions        
+            You must be at least 13 years old to use our Services.  
+            If you are under the minimum age in your country, you may use the Services only under the supervision 
+            of a parent or legal guardian.  
+            For EU users, GDPR may require users to be 16+ unless parental consent is provided.
         </p>
- 
-        <h3 class="supTitle">
-            <br>
-            2. User Responsibilities 
-        </h3>
-        <div class="session">
-            When using the App, you agree to:
-            <br>
-            &ensp;&ensp;◆ Provide accurate and complete information during the registration process.
-            <br>
-            &ensp;&ensp;◆ Keep your account credentials and OTPs confidential and not share them with others.
-            <br>
-            &ensp;&ensp;◆ Notify us immediately if you suspect any unauthorized access to your account.
-            <br>
-            &ensp;&ensp;◆ Comply with all applicable laws and regulations while using the App.
-        </div>
-        <h3 class="supTitle">
-            <br>
-            3. Intellectual Property
-        </h3>
+
+        <h3 class="supTitle"><br>4. License to Use the Services</h3>
         <p class="session">
-            the App, including all its content and features, is protected by intellectual property rights and is owned or licensed by us. You agree not to reproduce, modify, distribute, or create derivative works based on the App without our prior written consent.
+            We grant you a limited, non-exclusive, non-transferable, revocable license to download and use 
+            our mobile applications solely for personal, non-commercial use, in accordance with these Terms.
         </p>
-        <h3 class="supTitle">
-            <br>
-            4. Third-Party Services
-        </h3>
+
+        <h3 class="supTitle"><br>5. User Responsibilities</h3>
         <p class="session">
-            the App may integrate with third-party services for advertising, analytics, and other purposes. Your use of such third-party services is subject to their respective terms and privacy policies. We are not responsible for any actions or data handling practices of third-party services.
+            You agree to use the Services responsibly and not engage in any of the following:
         </p>
-        <h3 class="supTitle">
-            <br>
-            5. Limitation of Liability
-        </h3>
+        <ul class="session">
+            <li>Reverse engineering, modifying, or decompiling the app</li>
+            <li>Using the Services for unlawful or harmful purposes</li>
+            <li>Circumventing security features or protection mechanisms</li>
+            <li>Interfering with servers, networks, or infrastructure</li>
+            <li>Attempting to gain unauthorized access to the Services</li>
+            <li>Uploading malicious code, viruses, or harmful scripts</li>
+            <li>Misusing any in-app permissions or data access rights</li>
+        </ul>
+
+        <h3 class="supTitle"><br>6. In-App Purchases & Subscriptions</h3>
         <p class="session">
-            the App is provided on an "as-is" basis, and we make no warranties or representations regarding its performance, reliability, or suitability for your intended use. We shall not be liable for any direct, indirect, incidental, special, or consequential damages arising from or related to your use of the App.
+            Some Services may offer optional in-app purchases or subscription features.  
+            Payments are processed securely by the platform provider (e.g., Google Play, Apple App Store).  
+            Artemis Lab does not store or process any payment information.
         </p>
-        <h3 class="supTitle">
-            <br>
-            6. Changes to the Terms
-        </h3>
         <p class="session">
-            We may update these Terms of Service from time to time. You will be notified of any changes, and your continued use of the App after the changes are made will constitute your acceptance of the revised terms.
+            Subscriptions automatically renew unless canceled through your platform account settings.
         </p>
-        <h3 class="supTitle">
-            <br>
-            7. Contact Us
-        </h3>
+
+        <h3 class="supTitle"><br>7. Advertisements & Third-Party Content</h3>
         <p class="session">
-            If you have any questions or concerns about these Terms of Service, please contact us at <a href="mailto:bravkidd@outlook.com">bravkidd@outlook.com</a>.
+            Our Services may display ads from trusted third-party networks such as Google AdMob, Applovin, 
+            Pangle, and Facebook Audience Network.  
+            We do not control the content of third-party ads and are not responsible for their accuracy, safety, 
+            or privacy practices.
         </p>
+
+        <h3 class="supTitle"><br>8. Third-Party SDKs & Integrations</h3>
+        <p class="session">
+            Our Services may include interactions with third-party SDKs for analytics, advertising, crash reporting, 
+            and performance monitoring.  
+            Use of these SDKs is governed by their respective privacy policies, listed in our Privacy Policy.
+        </p>
+
+        <h3 class="supTitle"><br>9. Intellectual Property</h3>
+        <p class="session">
+            All content, source code, graphics, logos, UI designs, features, and materials within the Services 
+            are the property of Artemis Lab or licensed to us.  
+            You may not copy, reproduce, distribute, or use any part of the Services without written permission.
+        </p>
+
+        <h3 class="supTitle"><br>10. Disclaimer of Warranties</h3>
+        <p class="session">
+            The Services are provided “as is” and “as available” without warranties of any kind, 
+            whether express or implied, including but not limited to:
+        </p>
+        <ul class="session">
+            <li>Fitness for a particular purpose</li>
+            <li>Non-infringement</li>
+            <li>Availability, reliability, or accuracy</li>
+        </ul>
+        <p class="session">
+            We do not guarantee that the Services will be error-free, uninterrupted, or free of security vulnerabilities.
+        </p>
+
+        <h3 class="supTitle"><br>11. Limitation of Liability</h3>
+        <p class="session">
+            To the maximum extent permitted by law, Artemis Lab is not responsible for:
+        </p>
+        <ul class="session">
+            <li>Any damages resulting from use or inability to use the Services</li>
+            <li>Loss of data, privacy, revenue, or profits</li>
+            <li>Issues caused by third-party SDKs or ads</li>
+            <li>Unauthorized access to your device or data</li>
+        </ul>
+
+        <h3 class="supTitle"><br>12. Termination</h3>
+        <p class="session">
+            We reserve the right to suspend or terminate your access to the Services at any time, 
+            with or without notice, for violations of these Terms or other harmful activities.
+        </p>
+
+        <h3 class="supTitle"><br>13. GDPR, CCPA, and Global Privacy Laws</h3>
+        <p class="session">
+            Artemis Lab complies with GDPR (EU), CCPA/CPRA (California), and LGPD (Brazil).  
+            Depending on your region, you may have rights to access, delete, correct, or restrict processing of your personal data.
+        </p>
+        <p class="session">
+            For privacy-related requests, please contact us via the email provided below.
+        </p>
+
+        <h3 class="supTitle"><br>14. Data Transfers</h3>
+        <p class="session">
+            Your data may be processed in countries outside your region.  
+            We implement appropriate safeguards such as Standard Contractual Clauses (SCCs) 
+            and industry-standard security measures to protect your data.
+        </p>
+
+        <h3 class="supTitle"><br>15. Changes to These Terms</h3>
+        <p class="session">
+            We may modify these Terms from time to time.  
+            Continued use of the Services indicates acceptance of the updated Terms.
+        </p>
+
+        <h3 class="supTitle"><br>16. Contact Us</h3>
+        <p class="session">
+            If you have questions about these Terms, please contact us:<br>
+            <a href="mailto:bravkidd@outlook.com">bravkidd@outlook.com</a>
+        </p>
+
     </div>
 </body>
 </html>
