Update Terms of Services.html

--- a/Terms of Services.html
+++ b/Terms of Services.html
@@ -63,15 +63,81 @@
             <li>Misusing any in-app permissions or data access rights</li>
         </ul>
 
-        <h3 class="supTitle"><br>6. In-App Purchases & Subscriptions</h3>
-        <p class="session">
-            Some Services may offer optional in-app purchases or subscription features.  
-            Payments are processed securely by the platform provider (e.g., Google Play, Apple App Store).  
-            Artemis Lab does not store or process any payment information.
-        </p>
-        <p class="session">
-            Subscriptions automatically renew unless canceled through your platform account settings.
-        </p>
+<h3 class="supTitle"><br>6. In-App Purchases, Subscriptions, Trials, and Billing</h3>
+
+<p class="session">
+    Some of our Services may offer optional in-app purchases (“IAP”) or auto-renewable subscriptions 
+    that provide access to premium features. All purchases and billing operations are handled directly 
+    by the platform provider (Google Play Store or Apple App Store). Artemis Lab does not collect, store, 
+    or process any payment or credit card information.
+</p>
+
+<p class="session">
+    <strong>6.1 Auto-Renewable Subscriptions</strong><br>
+    If you subscribe to a premium plan, your subscription will automatically renew at the end of each 
+    billing period (weekly, monthly, yearly, or as specified) unless canceled at least 24 hours before 
+    the renewal date. Your account will be charged for the renewal within 24 hours prior to the end of 
+    the current period.
+</p>
+
+<p class="session">
+    <strong>6.2 Free Trials</strong><br>
+    If a free trial is offered, any unused portion of the trial will expire once the user purchases a subscription.  
+    Unless canceled at least 24 hours before the trial period ends, your subscription will automatically convert 
+    to a paid plan and the applicable fee will be charged to your platform account.
+</p>
+
+<p class="session">
+    <strong>6.3 How to Manage or Cancel Your Subscription</strong><br>
+    You may modify or cancel your subscription at any time through your platform account settings:
+</p>
+
+<ul class="session">
+    <li><strong>On iOS:</strong> Settings → Apple ID → Subscriptions</li>
+    <li><strong>On Android:</strong> Google Play Store → Profile → Payments & Subscriptions → Subscriptions</li>
+</ul>
+
+<p class="session">
+    Deleting the app does <strong>not</strong> cancel your subscription. You must cancel through your 
+    Apple or Google account settings to avoid auto-renewal charges.
+</p>
+
+<p class="session">
+    <strong>6.4 Refund Policy</strong><br>
+    All payment transactions, refunds, and billing inquiries are processed exclusively by 
+    Apple App Store or Google Play Store. Artemis Lab cannot issue refunds directly.  
+    Refund requests must be submitted to the respective platform:
+</p>
+
+<ul class="session">
+    <li><strong>Apple App Store:</strong> <a href="https://reportaproblem.apple.com">https://reportaproblem.apple.com</a></li>
+    <li><strong>Google Play Store:</strong> <a href="https://support.google.com/googleplay/answer/2479637">Google Play Refund Center</a></li>
+</ul>
+
+<p class="session">
+    Refund eligibility is determined solely by the platform provider and subject to their policies, 
+    including regional consumer protection laws where applicable.  
+    Artemis Lab does not override or influence refund decisions.
+</p>
+
+<p class="session">
+    <strong>6.5 Pricing & Changes</strong><br>
+    We reserve the right to modify subscription pricing at any time.  
+    If prices change, you will be notified by Apple or Google before renewal.  
+    Continued use after the price change constitutes acceptance.
+</p>
+
+<p class="session">
+    <strong>6.6 Unauthorized or Fraudulent Purchases</strong><br>
+    Users are responsible for securing their device and account credentials.  
+    Artemis Lab is not responsible for unauthorized purchases made through the user’s account or device.
+</p>
+
+<p class="session">
+    <strong>6.7 Compliance With Local Laws</strong><br>
+    Subscription terms and refund rights may vary based on regional consumer laws (e.g., GDPR, CCPA, LGPD, EU Consumer Rights Directive).  
+    Where required, local legal protections will apply in addition to these Terms.
+</p>
 
         <h3 class="supTitle"><br>7. Advertisements & Third-Party Content</h3>
         <p class="session">
@@ -157,3 +223,4 @@
     </div>
 </body>
 </html>
+
