--- a/Privacy.html
+++ b/Privacy.html
@@ -32,36 +32,50 @@
             any third-party companies or platforms mentioned in our Services.
         </p>
 
-        <!-- INFO WE COLLECT -->
-        <h3 class="supTitle"><br>Information We Collect</h3>
+        <!-- INFO WE COLLECT --><h3 class="supTitle"><br>Information We Collect</h3>
 
-        <p class="session">
-            <strong>1. Advertising Identifiers:</strong><br>
-            We may access your device’s advertising identifiers (Google Advertising ID, Apple IDFA) 
-            to provide personalized ads, frequency capping, fraud detection, and performance analytics.
-        </p>
+<p class="session">
+    <strong>0. No Collection of Your Personal Content</strong><br>
+    We do not collect, upload, store, share, analyze, or transmit any personal content from your device—including 
+    photos, videos, messages, notifications, media files, or documents—to Artemis Lab servers or any third-party servers.  
+    All content processing required for app features (such as photo analysis, file scanning, message recovery, 
+    or device storage optimization) takes place entirely on your device. Your personal content never leaves your phone 
+    and is never accessible to us or to any external party.
+</p>
 
-        <p class="session">
-            <strong>2. Device & Technical Log Data:</strong><br>
-            We collect certain technical information automatically, including:
-        </p>
+<p class="session">
+    <strong>1. Advertising Identifiers:</strong><br>
+    We may access your device’s advertising identifiers (Google Advertising ID, Apple IDFA) to provide personalized ads, 
+    frequency capping, fraud detection, and performance analytics. These identifiers do not reveal your name, files, photos, 
+    messages, or direct personal identity.
+</p>
 
-        <ul class="session">
-            <li>Error logs, crash diagnostics</li>
-            <li>Performance metrics</li>
-        </ul>
+<p class="session">
+    <strong>2. Device & Technical Log Data:</strong><br>
+    We automatically collect non-personal technical information to ensure stable, secure, and optimized app performance. 
+    This may include:
+</p>
 
-        <p class="session">
-            <strong>3. Usage Analytics:</strong><br>
-            Anonymous analytics to understand feature usage and improve product experience.  
-            No photos, videos, chats, or personal files are uploaded without your permission.
-        </p>
+<ul class="session">
+    <li>IP address (region only)</li>
+    <li>Device model and OS version</li>
+    <li>App settings and interactions</li>
+    <li>Error logs and crash diagnostics</li>
+    <li>Performance metrics</li>
+</ul>
 
-        <p class="session">
-            <strong>4. In-App Permissions:</strong><br>
-            Permissions such as camera, photos, notifications, or storage are used strictly 
-            for core functionality and never for unauthorized data collection.
-        </p>
+<p class="session">
+    <strong>3. Usage Analytics:</strong><br>
+    We may collect anonymized usage metrics (e.g., which features are used) to improve product functionality.  
+    No personal content such as photos, videos, messages, files, or private media is ever uploaded or accessed by us.
+</p>
+
+<p class="session">
+    <strong>4. In-App Permissions:</strong><br>
+    If the Services require access to features like camera, photo library, notifications, or storage, 
+    such permissions are used strictly for core app functionality.  
+    All processing is performed locally on your device and not transmitted to any server.
+</p>
 
         <!-- HOW WE USE -->
         <h3 class="supTitle"><br>How We Use Your Information</h3>
@@ -79,6 +93,13 @@
         <p class="session">
             We do <strong>not</strong> sell your personal information.
         </p>
+
+        <p class="session">
+    We also do <strong>not</strong> share any personal information or personal content—such as your 
+    photos, videos, messages, documents, or any files stored on your device—with Artemis Lab servers 
+    or with any third-party companies. All sensitive processing performed by the Services occurs 
+    entirely on your device and never leaves your phone.
+</p>
 
         <!-- THIRD-PARTY SDKs -->
         <h3 class="supTitle"><br>Third-Party SDKs We Use</h3>
@@ -120,7 +141,15 @@
             We retain data only for as long as necessary to operate our Services, comply with legal obligations, 
             resolve disputes, and enforce our agreements. Crash logs and analytics data may be retained for a limited period.
         </p>
-
+        
+<h3 class="supTitle"><br>On-Device Processing & No Upload Policy</h3>
+<p class="session">
+    All sensitive operations—including photo analysis, media scanning, message-related features, 
+    and local device processing—are performed entirely on your device.  
+    We do not upload, store, transfer, sell, or share your personal content (photos, videos, messages, 
+    files, or any media) with Artemis Lab servers or any third-party services.  
+    Your content remains fully private and local to your device at all times.
+</p>
         <!-- SECURITY -->
         <h3 class="supTitle"><br>Security</h3>
         <p class="session">
@@ -208,4 +237,5 @@
     </div>
 </body>
 </html>
+
 
