Update Terms of Services.html

--- a/Terms of Services.html
+++ b/Terms of Services.html
@@ -104,18 +104,13 @@
 
 <p class="session">
     <strong>6.4 Refund Policy</strong><br>
-    All payment transactions, refunds, and billing inquiries are processed exclusively by 
-    Apple App Store or Google Play Store. Artemis Lab cannot issue refunds directly.  
-    Refund requests must be submitted to the respective platform:
+    
 </p>
 
-<ul class="session">
-    <li><strong>Apple App Store:</strong> <a href="https://reportaproblem.apple.com">https://reportaproblem.apple.com</a></li>
-    <li><strong>Google Play Store:</strong> <a href="https://support.google.com/googleplay/answer/2479637">Google Play Refund Center</a></li>
-</ul>
+
 
 <p class="session">
-    Refund eligibility is determined solely by the platform provider and subject to their policies, 
+    Refund eligibility is determined solely by the platform provider（Apple App Store or Google Play Store）and subject to their policies, 
     including regional consumer protection laws where applicable.  
     Artemis Lab does not override or influence refund decisions.
 </p>
@@ -223,4 +218,5 @@
     </div>
 </body>
 </html>
+
 
